# desktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: ActionCard.tsx  Avatar.tsx  BootSkeleton.tsx  BrandDot.tsx  Button.tsx  CheckboxField.tsx  ContextMenu.tsx  EmptyState.tsx  Field.tsx  Kbd.tsx  Modal.tsx  RecentCard.tsx  SearchInput.tsx  SegmentedFilter.tsx  SettingsSection.tsx  TextInput.tsx  ThemeCard.tsx  Toast.tsx  Topbar.tsx  UserChip.tsx  VersionTag.tsx  WizardCard.tsx  WizardStepper.tsx
.github/workflows/: ci.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
apps/shell/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/shell/scripts/: copy-editors.sh
apps/shell/src/: main.ts  styles.css
apps/shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json  launcher.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: lib.rs  main.rs
apps/shell/tests/: README.md  _setup.ts  auto-update-gating.spec.ts  auto-update-setting.spec.ts  crash-recovery.spec.ts  docx-ui-inspect.spec.ts  editor-boot.spec.ts  editor-save-flows.spec.ts  editor-save.spec.ts  filter-tabs-arrow-nav.spec.ts  greeting-refresh.spec.ts  launcher-recents-refresh.spec.ts  launcher-regressions.spec.ts  launcher-state-regressions.spec.ts  launcher.spec.ts  modal-focus-trap.spec.ts  multi-file-drop.spec.ts  recent-cards-arrow-nav.spec.ts  settings-privacy-platform.spec.ts  settings-theme-preview.spec.ts  whats-new.spec.ts
docs/: AUTO_UPDATE.md  BUILD.md  CODE-GRAPH.md  COMPETITIVE_ANALYSIS.md  INSTALL.md  PIPELINE.md  PRODUCT_AUDIT.md  RELEASE_TRACKER.md  ROADMAP.md  UX-AUDIT.md
scripts/: build-docx.sh  build-sheets.sh
