[package]
name = "deskapp-shell"
version = "0.1.0"
description = "deskApp — cross-platform document editor wrapper"
authors = ["Casual Office"]
edition = "2021"

[lib]
name = "deskapp_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filesystem watcher for external-change detection on open documents
# (rename/move/delete/external-modify of the file the user is editing).
notify = "8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
