[package]
name = "deskapp-shell"
version = "0.0.1"
description = "deskApp — cross-platform document editor wrapper"
authors = ["Casual Office"]
edition = "2021"

[lib]
name = "deskapp_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filesystem watcher for external-change detection on open documents
# (rename/move/delete/external-modify of the file the user is editing).
notify = "8"

# Native webview print-to-PDF (Linux/WebKitGTK). Pinned to the exact versions
# Tauri 2.11 / wry 0.55 resolve, so `with_webview().inner()` yields a matching
# `webkit2gtk::WebView`. macOS/Windows arms are stubbed until those builds exist.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
gtk = "=0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
