[package]
name = "deskapp-shell"
version = "0.0.5"
description = "deskApp — cross-platform document editor wrapper"
authors = ["Casual Office"]
edition = "2021"

[lib]
name = "deskapp_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
# In-app auto-update from GitHub releases (signed updater artifacts +
# latest.json); plugin-process supplies the relaunch after an update installs.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filesystem watcher for external-change detection on open documents
# (rename/move/delete/external-modify of the file the user is editing).
notify = "8"

# Native webview print-to-PDF on macOS via WKWebView.createPDF (selectable
# text). Pinned to the objc2 versions Tauri 2.11 / wry 0.55 resolve, so the
# `with_webview().inner()` WKWebView pointer lines up.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
block2 = "0.6"

# Linux/WebKitGTK: WebKitPrintOperation → PDF file. Pinned to Tauri/wry's
# webkit2gtk so with_webview().inner() matches. (Compiled on the Linux CI.)
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
gtk = "=0.18"

# Windows/WebView2: ICoreWebView2_7::PrintToPdf. (Compiled on the Windows CI.)
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
